# AgneticTheata

./: .gitignore  Dockerfile  db_test.py  pyproject.toml  requirements.txt  run.sh  server.py
agents/: .env  agent.py  gmail_auth.py
