[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "google-auth-oauthlib>=1.0.0", # Ensure this is present and a recent version
    "google-api-python-client>=2.0.0",
    "email-validator>=2.0.0",
    "aiohttp>=3.8.0" # Added for the temporary OAuth redirect server
]